--- a/app/assets/styles/modules/_page-section.css
+++ b/app/assets/styles/modules/_page-section.css
@@ -4,10 +4,36 @@
     @mixin atMedium {
         padding: 4.5rem 0;
     }
+    
+    &--no-padding-b-until-medium {
+        padding-bottom: 0;
+        
+        @mixin atMedium {
+            padding-bottom: 4.5rem;
+        }
+    }
+    
+    &--no-padding-b-until-large {
+        padding-bottom: 0;
+        
+        @mixin atLarge {
+            padding-bottom: 4.5rem;
+        }
+    }
+    
 
     &--blue {
         background: $mainBlue;
         color: #fff;
     }
+    
+    &--testimonials {
+        background-color: #e0e6ef;
+        @mixin atLarge {
+            background: url(/assets/images/testimonials-bg.jpg) top center no-repeat;
+            background-size: cover;
+        }
+    }
+    
 }
 
