--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,25 +1,37 @@
 .row {
 
     @mixin clearfix;
+
+    &--gutters {
+        margin-right: -65px;
+    }
+
+    &--gutters-small {
+        margin-right: -45px;
+    }
+    
+    &--gutters-large {
+        margin-right: -100px;
+    }
     
     &--gutters > div {
         padding-right: 65px;
+    }
+    
+    &--gutters-small > div {
+        padding-right: 45px;
     }
     
     &--gutters-large > div {
         padding-right: 100px;
     }
     
-    &--gutters {
-        margin-right: -65px;
-    }
-
-    &--gutters-large {
-        margin-right: -100px;
-    }
-    
     &__b-margin-until-medium {
         margin-bottom: 1rem;
+    }
+    
+    &--t-padding {
+        padding-top: 80px;
     }
     
     @mixin atMedium {
@@ -51,4 +63,60 @@
             width: 50%;
         }
     }
+    
+    @mixin atLarge {
+
+        &__b-margin-until-large {
+            margin-bottom: 0;
+        }
+        
+        &__large-4 {
+            float: left;
+            width: 33.33%;
+        }
+        
+        &__large-4--larger {
+            width: 37%;
+        }
+
+        &__large-8 {
+            float: left;
+            width: 66.66%;
+        }
+
+        &__large-8--smaller {
+            width: 63%;
+        }
+        
+        &__large-6 {
+            float: left;
+            width: 50%;
+        }
+    }
+    
+    &--equal-height-at-medium {
+        
+         @mixin atMedium {
+            display: flex;
+        }
+        
+        & > div {
+            
+            display: flex;
+        }    
+    }
+    
+    &--equal-height-at-large {
+        
+         @mixin atLarge {
+            display: flex;
+        }
+        
+        & > div {
+            
+            display: flex;
+        }    
+    }
+    
+    
 }
