--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -7,22 +7,30 @@
         font-size: 3.75rem;
     }
     
-    
     strong {
         font-weight: 500;
     }
     
+    &--blue {
+        color: $mainBlue;
+    }    
+    
     &__icon {
+        display: block;
         margin-left: auto;
         margin-right: auto;
         margin-bottom: .6rem;
-        display: block;
-    }
-    
+        
     @mixin atSmall {
-        display: inline-block;
+        position: relative;
+        top: 8px;
         margin-right: .5rem;
         margin-left: 0;
         margin-bottom: 0;
+        display: inline-block;
     }
+
+    }
+    
+    
 }
