--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -12,3 +12,4 @@
 @import "modules/_section-title";
 @import "modules/_feature-items";
 @import "modules/_testimonials";
+@import "modules/_sprite";
