--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -13,3 +13,5 @@
 @import "modules/_feature-items";
 @import "modules/_testimonials";
 @import "modules/_site-footer";
+@import "modules/_site-header";
+@import "modules/_primary-nav";
